# opc-ua-sensor-transfer

./: CMakeLists.txt  sw_build.sh
KeyCertParser/: CMakeLists.txt
KeyCertParser/CertParser/: CMakeLists.txt  cert_parser.cpp  cert_parser.h
KeyCertParser/KeyParser/: CMakeLists.txt  key_parser.cpp  key_parser.h
include/: opcua_i2c.h  opcua_server.h
mldsa/: CMakeLists.txt
mldsa/include/: config.h  constant.h  mldsa.h  poly_algo.h  poly_vector.h  poly_vector.tpp  utils.h
mldsa/ref/include/: fips202.h  stream.h
mldsa/ref/source/: stream.cpp
mldsa/source/: mldsa.cpp  poly_algo.cpp  utils.cpp
src/: i2c.cpp  i2c.cpp.bak  i2c_speed_sensor.cpp.bak  opc_server.h  server copy.cpp  server.cpp  server_lib.cpp  server_signing_lock.cpp  temp_server.cpp
src/__sensor/: sensor_i2c.h
